# traning

./: hello.cpp
.github/: brach_googel_test_example.yml
.github/workflows/: main_c.yml
googel_Test/: CMakeLists.txt
googel_Test/tests/: test_math.cpp
new_app_new_feature/: hady.md
testapp/: add.cpp  test.cpp
